5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1575_1326.log
== SUBMITION (2019-03-12 11:19:38) 
-- CODE:
(print"R$75.00")
-- EXECUTION TIME:
0.219585
-- ERROR:
  File "/home/codebench/codes/1575/1326/main.py", line 1
    (print"R$75.00")
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:19:52) 
-- CODE:
(print"R$75")
-- EXECUTION TIME:
0.201255
-- ERROR:
  File "/home/codebench/codes/1575/1326/main.py", line 1
    (print"R$75")
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:20:30) 
-- CODE:
print($75)
-- EXECUTION TIME:
0.195687
-- ERROR:
  File "/home/codebench/codes/1575/1326/main.py", line 1
    print($75)
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:20:49) 
-- CODE:
print(75)
-- EXECUTION TIME:
0.126433
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 09:15:22) 
-- CODE:
print(75)
-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 09:15:26) 
-- CODE:
print(75)
-- EXECUTION TIME:
0.162805
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
